added more content

--- a/index.html
+++ b/index.html
@@ -77,25 +77,12 @@
                 <h1>Laminar Dynamics</h1>
                 <hr>
                 <p>Vaccine delivery in Africa.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
-                    <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="services">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -126,6 +113,33 @@
                         <h3>The Last Mile</h3>
                         <p class="text-muted">The infrastructure in the last mile leading to many remote villages is not appropriate for cars.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">疫苗发展近况</h2>
+                    <hr class="light">
+                    <p class="text-faded">The Global Vaccine Action Plan is a vision shared between nearly 200 countries, backed by the WHO. Their goal is to vaccinate every human being by 2020, saving more than 20 million lives. Current approaches try to improve the quality of vaccines or build better roads in rural areas.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-primary" style="background-image: url('img/drone.jpg'); background-size: cover; min-height: 100%">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center" style="margin-top: 10%">
+                    <h2 class="section-heading">Our solution? Drones.</h2>
+                    <hr class="light">
+                    <p class="text-faded">Our drones fly to the most rural parts of Africa, inaccessible to ground transportation. Vaccines are parachuted down in packages to health workstations. The entire flight is autonomous.</p>
+                    <p class="text-faded">We expect to cover 90% of Sub-Saharan Africa.</p>
+                    <p class="text-faded">Our drones have a <strong>400km (250 mile)</strong> range, a payload of <strong>25kg (55 lbs)</strong>, and speed of <strong>90 mph (145 kph)</strong>. They are deployed autonomously, driven by in-house autopilot, with RC backup.</p>
+                    <p class="text-faded">Each drone costs <strong>$2,500</strong>, with an expected lifespan of <strong>1200 missions</strong> and almost <strong>no maintenance cost</strong>. <strong>Each delivery over 100 miles is expected to cost only $4.</strong></p>
                 </div>
             </div>
         </div>
@@ -279,33 +293,22 @@
                     </a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <hr class="light">
+                </div>
+            </div>
         </div>
     </section>
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-            </div>
-        </div>
-    </aside>
-
-    <section id="contact">
+    <section class="bg-primary" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <h2 class="section-heading">Interested?</h2>
+                    <p class="text">Shoot us an email if you have would like to know more.</p>
+                <div class="text-center">
+                    <a href="mailto:hw2473@columbia.edu"><i style="color: white" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i></a>
                 </div>
             </div>
         </div>
