--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Laminar Dynamics</h1>
+                <img src="img/logo.png">
                 <hr>
                 <p>Vaccine delivery in Africa.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
@@ -136,7 +136,10 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center" style="margin-top: 10%">
                     <h2 class="section-heading">Our solution? Drones.</h2>
                     <hr class="light">
-                    <p class="text-faded">Our drones fly to the most rural parts of Africa, inaccessible to ground transportation. Vaccines are parachuted down in packages to health workstations. The entire flight is autonomous.</p>
+                    <p class="text-faded">A few months ago, we asked our friends at NPU (Northeastern Polytechnical University) in Xi’an to design two drones for us.</p>
+                    <p class="text-faded">The first is a high-payload, long-ranged fixed-wing drone aimed at one-way deliveries of vaccines and large packages. Cargo will parachute down in insulated packages to health workstations.</p>
+                    <p class="text-faded">The second is a combination fixed-wing / quadcopter that will focus on blood samples and medium sized packages. Takeoff and landing is vertical, eliminating the need for complex ground stations.</p>
+                    <p class="text-faded">Both drones will fly autonomously to the most rural parts of Africa, inaccessible to ground transportation.</p>
                     <p class="text-faded">We expect to cover 90% of Sub-Saharan Africa.</p>
                     <p class="text-faded">Our drones have a <strong>400km (250 mile)</strong> range, a payload of <strong>25kg (55 lbs)</strong>, and speed of <strong>90 mph (145 kph)</strong>. They are deployed autonomously, driven by in-house autopilot, with RC backup.</p>
                     <p class="text-faded">Each drone costs <strong>$2,500</strong>, with an expected lifespan of <strong>1200 missions</strong> and almost <strong>no maintenance cost</strong>. <strong>Each delivery over 100 miles is expected to cost only $4.</strong></p>
