--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-sm-6">
-                    <a class="portfolio-box">
+                    <a class="portfolio-box" style="background: rgba(87, 6, 140, 0.9);">
                         <img src="img/headshots/aneesh-ashutosh.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption" style="background: rgba(87, 6, 140, 0.9);">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Aneesh Ashutosh
