updated header and changed from light to dark theme

--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#meet-the-team">Team</a>
                     </li>
                     <li>
@@ -76,7 +73,7 @@
             <div class="header-content-inner">
                 <img src="img/logo.png">
                 <hr>
-                <p>Vaccine delivery in Africa.</p>
+                <p>Vaccine delivery with drones.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
             </div>
         </div>
