updated team based on the slideshow

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#meet-the-team">Team</a>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -174,7 +174,7 @@
         </div>
     </section>
 
-    <section class="bg-primary">
+    <section class="bg-primary" id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -221,21 +221,6 @@
             <div class="row no-gutter">
                 <div class="col-lg-2 col-sm-6">
                     <a class="portfolio-box">
-                        <img src="img/headshots/lucas-schuermann.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Lucas Schuermann
-                                </div>
-                                <div class="project-name">
-                                    Co-founder
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <a class="portfolio-box">
                         <img src="img/headshots/harvey-wu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -243,7 +228,7 @@
                                     Harvey Wu
                                 </div>
                                 <div class="project-name">
-                                    Co-founder
+                                    CEO / Co-founder
                                 </div>
                             </div>
                         </div>
@@ -255,10 +240,25 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Eric Xu
+                                    Baoyi "Eric" Xu
                                 </div>
                                 <div class="project-name">
-                                    Co-founder
+                                    CFO / Co-founder
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-sm-6">
+                    <a class="portfolio-box">
+                        <img src="img/headshots/lucas-schuermann.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Lucas Schuermann
+                                </div>
+                                <div class="project-name">
+                                    CTO / Co-founder
                                 </div>
                             </div>
                         </div>
@@ -270,10 +270,70 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Mark Fang
+                                    Shuaipeng "Mark" Fang
                                 </div>
                                 <div class="project-name">
-                                    Investor Relations
+                                    VP of Investor Relations
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-sm-6">
+                    <a class="portfolio-box">
+                        <img src="img/headshots/junius-williams.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption" style="background: rgba(164, 16, 52, 0.9);">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Junius Williams
+                                </div>
+                                <div class="project-name">
+                                    Deployment Advisor
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-sm-6">
+                    <a class="portfolio-box">
+                        <img src="img/headshots/tommy-fang.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Zixuan "Tommy" Fang
+                                </div>
+                                <div class="project-name">
+                                    Marketing Analyst
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-sm-6">
+                    <a class="portfolio-box">
+                        <img src="img/headshots/vinay-mehta.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Vinay Mehta
+                                </div>
+                                <div class="project-name">
+                                    Marketing Analyst
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-sm-6">
+                    <a class="portfolio-box">
+                        <img src="img/headshots/aneesh-ashutosh.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption" style="background: rgba(87, 6, 140, 0.9);">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Aneesh Ashutosh
+                                </div>
+                                <div class="project-name">
+                                    Webmaster / Software Engineer
                                 </div>
                             </div>
                         </div>
@@ -288,22 +348,7 @@
                                     Carlos Martin
                                 </div>
                                 <div class="project-name">
-                                    Data Scientist
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <a class="portfolio-box">
-                        <img src="img/headshots/tommy-fang.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Tommy Fang
-                                </div>
-                                <div class="project-name">
-                                    Marketing
+                                    Software Engineer
                                 </div>
                             </div>
                         </div>
@@ -318,37 +363,7 @@
                                     Justin Calamari
                                 </div>
                                 <div class="project-name">
-                                    Software Engineer
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <a class="portfolio-box">
-                        <img src="img/headshots/andy-xu.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Andy Xu
-                                </div>
-                                <div class="project-name">
-                                    Software Engineer
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <a class="portfolio-box" style="background: rgba(87, 6, 140, 0.9);">
-                        <img src="img/headshots/aneesh-ashutosh.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption" style="background: rgba(87, 6, 140, 0.9);">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Aneesh Ashutosh
-                                </div>
-                                <div class="project-name">
-                                    Web Developer
+                                    Data Analyst
                                 </div>
                             </div>
                         </div>
