--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <!-- /.container-fluid -->
   </nav>
 
+  <!-- Header -->
   <header>
     <div class="header-content">
       <div class="header-content-inner">
@@ -91,6 +92,7 @@
     </div>
   </header>
 
+  <!-- Last Mile -->
   <section id="about" class="container-bg" style="background-image: url(img/slides/slide_1.jpg)">
     <div class="container">
       <div class="row">
@@ -109,6 +111,7 @@
     </div>
   </section>
 
+  <!-- Our Solution -->
   <section class="bg-primary" class="container-bg" style="background-image: url(img/slides/slide_2.jpg)">
     <div class="container">
       <div class="row">
@@ -145,6 +148,7 @@
     </div>
   </section>
 
+  <!-- Market Validation -->
   <section class="bg-primary" class="container-bg" style="background-image: url(img/slides/slide_3.jpg)">
     <div class="container">
       <div class="row">
@@ -175,6 +179,7 @@
     </div>
   </section>
 
+  <!-- Drone Delivery -->
   <section class="bg-primary" style="background-image: url('img/drone.jpg'); background-size: cover; min-height: 75%">
     <div class="container">
       <div class="row">
@@ -187,6 +192,7 @@
     </div>
   </section>
 
+  <!-- Who We Are -->
   <section class="bg-primary" id="team">
     <div class="container">
       <div class="row">
@@ -220,6 +226,7 @@
     </div>
   </section>
 
+  <!-- Meet the Team -->
   <section class="no-padding" id="meet-the-team">
     <div class="container">
       <div class="row">
@@ -376,6 +383,7 @@
     </div>
   </section>
 
+  <!-- Contact -->
   <section class="bg-primary" id="contact">
     <div class="container">
       <div class="row">
