added andy and catherine

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                   Harvey Wu
                 </div>
                 <div class="project-name">
-                  CEO / Co-founder
+                  Co-founder
                 </div>
               </div>
             </div>
@@ -263,7 +263,7 @@
                   Baoyi "Eric" Xu
                 </div>
                 <div class="project-name">
-                  CFO / Co-founder
+                  Co-founder
                 </div>
               </div>
             </div>
@@ -278,7 +278,7 @@
                   Lucas Schuermann
                 </div>
                 <div class="project-name">
-                  CTO / Co-founder
+                  Co-founder
                 </div>
               </div>
             </div>
@@ -316,6 +316,21 @@
         </div>
         <div class="col-lg-2 col-sm-6">
           <a class="portfolio-box">
+            <img src="img/headshots/catherine-song.jpg" class="img-responsive" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">
+                  Catherine Song
+                </div>
+                <div class="project-name">
+                  Marketing Analyst
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-2 col-sm-6">
+          <a class="portfolio-box">
             <img src="img/headshots/vinay-mehta.jpg" class="img-responsive" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -323,7 +338,22 @@
                   Vinay Mehta
                 </div>
                 <div class="project-name">
-                  Marketing Analyst
+                  Software Engineer
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-2 col-sm-6">
+          <a class="portfolio-box">
+            <img src="img/headshots/andy-xu.jpg" class="img-responsive" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">
+                  Andy Xu
+                </div>
+                <div class="project-name">
+                  Software Engineer
                 </div>
               </div>
             </div>
